# Futures-agents

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PHASE2_ANALYSIS.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_MASTER_PROMPT.md  PHASE3_SYSTEM_PROMPT.md  PHASE5_SYSTEM_PROMPT.md  PRD.md  RL_TRAINING_COLAB_GUIDE.md  VALIDATION_GUIDE.md  config.json  pairs.json  pyproject.toml  requirements.txt  run.sh  test_backtest_csv.py  test_rl_environment.py  test_skipped_filter.py
.claude/agent-memory/trader/: MEMORY.md  bug_risk_distance_threshold.md
.claude/agents/: trader.md
.rtk/: filters.toml
.serena/: project.yml
docs/: CONFIG_MIGRATION_PLAN.md  ENV_AND_SECRETS_RULE.md  IMPLEMENTATION_PLAN.md  PHASE8_SYSTEM_PROMPT.md  PRD.md  edit-engine.md  edit-execution.md
docs/bug/: 004-medium-low-notification-and-comment.md  006-critical-missing-close-price-reconciliation.md  007-critical-tp-failure-unprotected-trade.md  008-medium-fragile-fstring-sql-migration.md  009-high-bare-except-pass-cleanup.md  010-medium-duplicated-llm-call-analyst.md  011-high-trailing-stop-config-keyerror.md  012-high-config-type-mismatch.md  013-critical-orphan-order-db-loss.md  BUG_REPORT_ORDER_TRACKING.md  README.md  fix_001_reconcile_kills_pending_entry.md  fix_003_orphan_counter_order.md  fix_004_trailing_step_default.md  fix_005_tp_fail_no_alert.md  fix_006_db_write_missing_trades.md  fix_ws_silent_no_sltp.md  index.md  plan_fix_choch.md  plan_fix_ob.md
docs/plan/feature-plan/: 00_okr_overview.md  01_data_and_integrity.md  02_observability.md  03_validation.md  04_risk_decisions.md
docs/redundancy/: LOW.md  MEDIUM.md  README.md
docs/superpowers/plans/: 2026-04-19-llm-fallback-implementation.md
docs/superpowers/specs/: 2026-04-01-split-order-blocks-design.md  2026-04-14-cerebras-rate-limiter-design.md  2026-04-16-trailing-stop-liquidation-level-design.md  2026-04-19-llm-fallback-design.md
examples/: demo_environment.py
requirements/: base.txt  dev.txt
scripts/: export_trade_data.py  live_smc_test.py  live_smc_test.py.bak  manual_order_testnet.py  run_backtest.py  run_reversal.py  smc_analysis.py  smc_strategy.pine  test_backtest_csv.py  test_bug_fixes.py  test_cerebras_concurrency.py  test_onnx.py  test_rl_environment.py  test_skipped_filter.py  test_trend_debug.py  validate_indicators.py
src/: __init__.py  main.py
src/agents/llm/: __init__.py  analyst_agent.py  commander_agent.py  concierge_agent.py
src/agents/math/: __init__.py  base_agent.py  confirmation_agent.py  execution_agent.py  execution_utils.py  order_monitor.py  position_manager.py  reversal_agent.py  risk_agent.py  sltp_manager.py  trend_agent.py
src/backtest/: __init__.py  _engine_helpers.py  engine.py  engine.py.backup  engine.py.bak  metrics.py
src/config/: config_loader.py  pairs.py  settings.py
src/data/: ohlcv_fetcher.py  onchain_fetcher.py  storage.py  ws_user_stream.py
src/indicators/: _smc_core.py  helpers.py  luxalgo_smc.py  luxalgo_smc.py.bak  luxalgo_smc.py.bak1  mean_reversion.py
src/rl/: __init__.py  dqn_agent.py  environment.py  inference.py  replay_buffer.py  trainer.py
src/telegram/: __init__.py  bot.py  commands.py
src/utils/: exchange.py  kill_switch.py  llm_rate_limiter.py  logger.py  mode.py  rate_limiter.py  trade_utils.py
tests/: cek_db.py  cek_order.py  test_analyst_prompt.py  test_fetcher.py  test_indicators.py  test_indicators.py.bak  test_llm_fallback.py  test_ohlcv_optimization.py  test_phase8.py  test_risk_agent.py  test_settings_validation.py  test_sltp_manager.py  test_timestamp.py  test_trading_bot_structure.py
